Passing extra stuff to shaders

--- a/index.html
+++ b/index.html
@@ -5,8 +5,5 @@
   <title>A-SDF-eroids</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <p>Hello, World!</p>
-  <script src="asdferoids.js"></script>
-</body>
+<body><script src="asdferoids.js"></script></body>
 </html>
